[gd_scene load_steps=19 format=2]

[ext_resource path="res://resources/font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/ui-bits/FullAlert.gd" type="Script" id=2]
[ext_resource path="res://resources/theme-submenu.tres" type="Theme" id=3]
[ext_resource path="res://resources/BackgroundBlur.gdshader" type="Shader" id=4]
[ext_resource path="res://sounds/alert.mp3" type="AudioStream" id=5]
[ext_resource path="res://sounds/button-down-action.mp3" type="AudioStream" id=6]
[ext_resource path="res://sounds/use-option.mp3" type="AudioStream" id=7]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fade"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Foreground:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( -2, -2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 4 )
shader_param/lod = 2.0

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 0.25098 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0.392157 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 0.25098 )
corner_radius_top_left = 6
corner_radius_top_right = 6

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=8]
draw_center = false
border_width_left = 2
border_width_top = 2
border_color = Color( 1, 1, 1, 0.862745 )
corner_radius_top_left = 6

[sub_resource type="StyleBoxFlat" id=9]
draw_center = false
border_width_top = 2
border_width_right = 2
border_color = Color( 1, 1, 1, 0.784314 )
corner_radius_top_right = 6

[sub_resource type="StyleBoxFlat" id=10]
draw_center = false
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0.745098 )
corner_radius_bottom_right = 6

[sub_resource type="StyleBoxFlat" id=12]
draw_center = false
border_width_left = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 0.823529 )
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="FullAlert" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/fade = SubResource( 1 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="AcceptSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="KeyDownSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
copy_mode = 2
rect = Rect2( 0, 0, 600, 800 )

[node name="Blur" type="ColorRect" parent="."]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.188235 )

[node name="Foreground" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -400.0
margin_right = 300.0
margin_bottom = 400.0
rect_pivot_offset = Vector2( 300, 400 )

[node name="PanelContainer" type="PanelContainer" parent="Foreground"]
margin_left = 100.0
margin_top = 320.0
margin_right = 500.0
margin_bottom = 480.0
rect_min_size = Vector2( 400, 0 )
size_flags_horizontal = 7
size_flags_vertical = 7
custom_styles/panel = SubResource( 11 )

[node name="Content" type="VBoxContainer" parent="Foreground/PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 398.0
margin_bottom = 158.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Escape" type="Label" parent="Foreground/PanelContainer/Content"]
margin_right = 396.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
text = "Press the confirm key to continue"
align = 1
valign = 1

[node name="Background" type="Panel" parent="Foreground/PanelContainer/Content/Escape"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="Foreground/PanelContainer/Content"]
margin_top = 40.0
margin_right = 396.0
margin_bottom = 156.0
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 20

[node name="Alert" type="Label" parent="Foreground/PanelContainer/Content/MarginContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 381.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.501961 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "Notice: Your noticing of this notice has been noticed and will be reported to notable authorities."
autowrap = true

[node name="Corners" type="Control" parent="Foreground"]
margin_left = 100.0
margin_top = 320.0
margin_right = 500.0
margin_bottom = 480.0
rect_min_size = Vector2( 400, 160 )

[node name="Panel" type="Panel" parent="Foreground/Corners"]
margin_right = 12.0
margin_bottom = 12.0
custom_styles/panel = SubResource( 8 )

[node name="Panel2" type="Panel" parent="Foreground/Corners"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -12.0
margin_bottom = 12.0
custom_styles/panel = SubResource( 9 )

[node name="Panel3" type="Panel" parent="Foreground/Corners"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -12.0
custom_styles/panel = SubResource( 10 )

[node name="Panel4" type="Panel" parent="Foreground/Corners"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -12.0
margin_right = 12.0
custom_styles/panel = SubResource( 12 )

[node name="Highlight" type="Panel" parent="Foreground"]
visible = false
margin_left = 100.0
margin_top = 320.0
margin_right = 500.0
margin_bottom = 480.0
rect_min_size = Vector2( 400, 160 )
custom_styles/panel = SubResource( 7 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
